# Fourier-Operations

./: CMakeLists.txt  README.md  part1.cpp  part2.cpp  part3.cpp
